[aliases]

[bdist_rpm]
doc-files = doc

[options]
python_requires = >=3.6
install_requires =
	numpy>=1.18
    scipy
    numba
    scikit-learn
    tqdm
    autograd
	cython

[options.extras_require]
# Necessary for generating plots
plotting =
    seaborn
	matplotlib>=3.0

# Requirements necessary for building the documentation
doc =
	coverage
	flake8
 	memory_profiler  # measuring memory during docs building
	mkl
    jupytext
	myst-nb
	myst-parser
	numpydoc
	sphinx
	sphinx-copybutton
	sphinx-design
	sphinx-gallery
	sphinxcontrib-bibtex
	sphinxext-opengraph
	sphinx-book-theme

# For testing of oldest usable versions of dependencies.
min =
	numpy==1.18

# For running unit and docstring tests
test =
	codecov
	coverage
	pytest>=3.9
	pytest-cov

# A combination of dependencies useful for developers
dev =
	%(plotting)s
	%(doc)s
	%(test)s

[flake8]
# For PEP8 error codes see
# http://pep8.readthedocs.org/en/latest/intro.html#error-codes
# E402: module level import not at top of file
# W503: line break before binary operator
# W504: line break after binary operator
ignore=E402, W503, W504. W605

[tool:pytest]
doctest_optionflags = NORMALIZE_WHITESPACE ELLIPSIS
junit_family = xunit2
addopts =
	--doctest-modules
	-s
	-vv
	--durations=0
